<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" 
    >
    
     <LinearLayout 
       android:orientation="horizontal" 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="130dp">
 
			<TextView 
			    android:id="@+id/mttv1"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:gravity="center"
			    android:layout_gravity="center"
			    android:layout_weight="1"
			    android:text="@string/zhaopin"
			    android:textSize="40sp"
			 	/>
			<TextView 
			    android:id="@+id/mttv2"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:gravity="center"
			    android:layout_gravity="center"
			    android:layout_weight="1"
			    android:text="@string/ziyezige"
			    android:textSize="40sp"
			 	/>
			<TextView 
			    android:id="@+id/mttv3"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:gravity="center"
			    android:layout_gravity="center"
			    android:layout_weight="1"
			    android:text="@string/zufang"
			    android:textSize="40sp"
			 	/>
	</LinearLayout> 
	
    <LinearLayout 
       android:orientation="horizontal" 
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
 
			<TextView 
			    android:id="@+id/mbtv1"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:layout_weight="1"
			    android:text="招聘信息"
			    android:textSize="15sp"
			 	/>
			<TextView 
			    android:id="@+id/mbtv2"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:layout_weight="1"
			    android:text="职业资格"
			    android:textSize="15sp"
			 	/>
			<TextView 
			    android:id="@+id/mbtv3"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:layout_weight="1"
			    android:text="租房信息"
			    android:textSize="15sp"
			 	/>
	</LinearLayout>
	
     <LinearLayout 
       android:orientation="horizontal" 
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="130dp">
 
			<TextView 
			    android:id="@+id/mttv4"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:gravity="center"
			    android:layout_gravity="center"
			    android:layout_weight="1"
			    android:text="@string/lvyou"
			    android:textSize="40sp"
			 	/>
			<TextView 
			    android:id="@+id/mttv5"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			   	android:layout_gravity="center"
			    android:gravity="center"		    
			    android:layout_weight="1"
			    android:text="@string/jiaoyu"
			    android:textSize="40sp"
			 	/>
			<TextView 
			    android:id="@+id/mttv6"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			   	android:gravity="center"
			   	android:layout_gravity="center"
			    android:layout_weight="1"
			    android:text="@string/qita"
			    android:textSize="40sp"
			 	/>
	</LinearLayout> 
	
    <LinearLayout 
       android:orientation="horizontal" 
       android:layout_width="match_parent"
       android:layout_height="wrap_content">
 
			<TextView 
			    android:id="@+id/mbtv4"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:layout_weight="1"
			    android:text="旅游攻略"
			    android:textSize="15sp"
			 	/>
			<TextView 
			    android:id="@+id/mbtv5"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:layout_weight="1"
			    android:text="学校概况"
			    android:textSize="15sp"
			 	/>
			<TextView 
			    android:id="@+id/mbtv6"
			    android:layout_width="wrap_content"
			   	android:layout_height="wrap_content"
			    android:layout_gravity="center"
			    android:gravity="center"
			    android:layout_weight="1"
			    android:text="公交线路"
			    android:textSize="15sp"
			 	/>
	</LinearLayout>
    
</LinearLayout>